P3 done: update AGENTS.md files, tick the plan, record the measured test inventory