@@ -9,12 +9,12 @@ The code was dormant from Feb 2024 to Sep 2026 and is being modernized.
 
 | Area | Current | Target (see plan) |
 |---|---|---|
-| Java | 1.8 (`java.version` in root pom) | `--release 21`, CI also on JDK 25 |
-| Web | Wicket 8.15, javax.servlet 3.x, Jetty 9.4.12 | Wicket 10.x, jakarta Servlet 6, Jetty 12 (ee10) |
-| DI | Guice 4.2 + guice-servlet | Guice 7 (jakarta.inject) |
-| DB | OrientDB 3.2.27, embedded by default; Hazelcast 3.x when distributed | latest OrientDB 3.2.x (pins Hazelcast 3.12) |
+| Java | `--release 21` (`maven.compiler.release`); builds and tests on JDK 21 and 25 | same |
+| Web | Wicket 8.15, javax.servlet 3.x, Jetty 9.4.58 | Wicket 10.x, jakarta Servlet 6, Jetty 12 (ee10) |
+| DI | Guice 6.0 + guice-servlet (javax.inject) | Guice 7 (jakarta.inject) |
+| DB | OrientDB 3.2.56 + GraalJS 25.0.4 (D8), embedded by default; Hazelcast 3.12.13 when distributed | latest OrientDB 3.2.x |
 | UI | CoreUI 3.4 / Bootstrap 4, Font Awesome 4.7, jQuery 3.4 (webjars) | CoreUI 5 / Bootstrap 5 |
-| Tests | JUnit 4 + custom Guice runner, Mockito 2 | JUnit Jupiter (vintage bridge first), Mockito 5 |
+| Tests | JUnit Platform: JUnit 4 tests (custom Guice runner) on the vintage engine, Jupiter 5.14 for new tests; Mockito 5 | same, migrate gradually |
 | Own libs | wicket-orientdb 2.0-SNAPSHOT, transponder-orientdb 1.1-SNAPSHOT | released versions (maintained in their own repos) |
 
 ## Build status — read first
@@ -23,9 +23,12 @@ The code was dormant from Feb 2024 to Sep 2026 and is being modernized.
   external Orienteer libraries publish their snapshots (plan D9). Only `wicket-orientdb:2.0-SNAPSHOT` is published so far;
   `transponder-orientdb:1.1-SNAPSHOT`, `wicket-console:1.4-SNAPSHOT` and `logger:1.4-SNAPSHOT` resolve only after a local
   `./mvnw install` in their repos (~/Development/Transponder, wicket-console, orienteer-logger), until they're deployed.
-- The poms will not compile on JDK 17+ until plan phase P3 (Lombok 1.18.16, Guice 4.2/cglib, old plugins).
+- `./mvnw clean install` is green on JDK 21 and 25 (since P3): 104 tests run, 0 failures, 16 skipped (see plan Appendix C).
   Dev machine: Temurin 21 via SDKMAN (`.sdkmanrc`), Temurin 25 also installed; use `./mvnw` (Maven 3.9.16).
-  Homebrew JDK 27 is non-LTS: don't target it.
+  Homebrew JDK 27 is non-LTS: don't target it. CI: `.github/workflows/ci.yml` (JDK 21/25, build only).
+- **JVM flags** (property `orienteer.jvm.args` in the root pom; surefire uses it, `.mvn/jvm.config` has the same for
+  `jetty:run`; also pass them to `java -jar` for standalone): `--add-opens java.base/java.lang=ALL-UNNAMED`
+  (Wicket 8 cglib proxies) and `--enable-native-access=ALL-UNNAMED` (GraalJS). Keep all three places in sync.
 - **Parked modules** (plan D3/P8): birt, bpm, camel, graph, taucharts and tours are only in the opt-in profile
   `parked` and are not built by default.
 - `.travis.yml`, `PITCHME.*`, `Procfile`, `system.properties` are dead leftovers (removed in P9/P10).
@@ -39,7 +42,7 @@ The code was dormant from Feb 2024 to Sep 2026 and is being modernized.
 ./mvnw -pl orienteer-mail test -Dtest=TestOMailModule  # single test class
 ./mvnw -Pparked -pl orienteer-graph -am verify         # try a parked module
 ./mvnw -Ddocker-build package                          # profile `dockerbuild`: core + war only
-cd orienteer-<module> && ../mvnw jetty:run             # run Orienteer + that module on :8080, embedded OrientDB
+cd orienteer-<module> && ../mvnw jetty:run             # run Orienteer + that module on :8080 (-Djetty.port=...), embedded OrientDB
 ```
 
 ## Layout
@@ -73,7 +76,7 @@ cd orienteer-<module> && ../mvnw jetty:run             # run Orienteer + that mo
 
 ## Conventions
 
-- Java 8 source level until P3 lands (no `var`, records, text blocks yet).
+- Java 21 source level: modern Java (`var`, records, text blocks, switch expressions) is fine in new code; don't rewrite old code just to modernize it.
 - Indentation is mostly tabs but mixed — match the surrounding file; no reformat-only diffs.
 - Interfaces **must** start with `I` (Checkstyle). OrientDB-related types use `O` (`OClass…`, DAO ifaces `IO…`).
   Schema-name constants: `CLASS_NAME`, `PROP_*` / `OPROPERTY_*`.
@@ -87,17 +90,20 @@ cd orienteer-<module> && ../mvnw jetty:run             # run Orienteer + that mo
 
 ## Testing
 
-- JUnit 4, `@RunWith(OrienteerTestRunner.class)` from the core test-jar (`org.orienteer.junit`). It boots a full
+- JUnit 4 style, `@RunWith(OrienteerTestRunner.class)` from the core test-jar (`org.orienteer.junit`), run on the JUnit
+  Platform (vintage engine; Jupiter is available for plain unit tests). The runner boots a full
   embedded Orienteer + OrientDB once per JVM using `orienteer-test.properties` → `TestEnvOrienteerWebApplication`.
   Tests are integration tests and share state (test classes are Guice `@Singleton`s).
 - `@Inject OrienteerTester tester;` for WicketTester; `@Sudo` to run as admin.
-- Surefire excludes `**/*Slow*` (network-dependent tests). Keep this style until the JUnit migration (plan P3).
+- Surefire excludes `**/*Slow*` (network-dependent tests); `-Pfulltest` runs everything.
+- `@Ignore` only with a reason in the annotation and a plan item (the 5 loader tests that need a dead snapshot repo are P4).
 
 ## Pitfalls
 
 - Don't bump one library in isolation: Wicket/Guice/servlet/Jetty/jakarta move together (plan P5–P6), and
   Hazelcast is pinned to 3.12.x by OrientDB distributed.
 - Running or testing creates `runtime/`, `databases/`, `Orienteer/`, `libs/` in the working dir — never commit them.
-- Until P3, `orienteer-core` gets two GraalVM lines (25.0.4 via wicket-orientdb, 21.3.5 via `orientdb-core`); 21.3.5 crashes on JDK 22+ (D8).
+- GraalVM 21.3.5 from `orientdb-core` is excluded in the root pom (D8). If a new OrientDB artifact pulls `org.graalvm*` 21.x back in, exclude it there too.
+- `@ProvidedBy(DAOProvider/ODocumentWrapperProvider)` needs `AbstractDynamicProvider.bindProvisionListener()` in the injector (done in `OModulesInitModule` and `OrienteerModule`).
 - `log4j2.xml` ships inside core and every module jar; loader defaults in `orienteer-default.properties` use dead/HTTP repo URLs.
 - No real credentials in committed files; the tracked properties hold dev defaults only.
